--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="title">
         我是标题
     </div>
+    <div class="body">我是body</div>
     <div class="footer">我是footer</div>
 </body>
 </html>
