--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <div class="title">
         我是标题
     </div>
-    <div class="body">我是body</div>
+    <div class="body">
+        <div>
+            你好呀！
+        </div>
+    </div>
     <div class="footer">我是footer</div>
 </body>
 </html>
