--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div>
             你好呀！
         </div>
+        <div>你也好呀</div>
     </div>
     <div class="footer">我是footer</div>
 </body>
