--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,5 +11,6 @@
     </div>
     <div class="body">我是body</div>
     <div class="footer">我是footer</div>
+    <div class="vs">我是在vs上面编辑的代码</div>
 </body>
 </html>
